--- a/resources.qrc
+++ b/resources.qrc
@@ -5,5 +5,6 @@
         <file>icon-cross.png</file>
         <file>icon-eye-closed.png</file>
         <file>icon-eye-opened.png</file>
+        <file>logo.png</file>
     </qresource>
 </RCC>
